--- a/package.json
+++ b/package.json
@@ -1,36 +1,42 @@
 {
-  "name": "barcode-scanner",
+  "name": "neet-mobile",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-navigation/material-bottom-tabs": "^6.2.20",
-    "@react-navigation/native": "^6.1.10",
+    "@react-native-async-storage/async-storage": "^1.19.4",
+    "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~50.0.6",
-    "expo-camera": "~14.0.4",
-    "expo-status-bar": "~1.11.1",
+    "@twotalltotems/react-native-otp-input": "^1.3.5",
+    "dependency": "^0.0.1",
+    "expo": "^49.0.16",
+    "expo-camera": "~13.4.4",
     "native-base": "^3.4.28",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-permissions": "^4.1.1",
-    "react-native-qrcode-scanner": "^1.5.5",
+    "react": "^18.2.0",
+    "react-native": "^0.72.6",
+    "react-native-clipboard": "^0.0.5",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-qrcode-svg": "^6.3.0",
+    "react-native-safe-area-context": "4.6.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.14",
+    "@types/react-native-datepicker": "^1.7.2",
+    "@types/react-native-modern-datepicker": "^1.0.4",
+    "@types/react-native-vector-icons": "^6.4.13",
     "typescript": "^5.1.3"
   },
   "private": true
