--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "^1.19.4",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "@react-navigation/stack": "^6.3.16",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@twotalltotems/react-native-otp-input": "^1.3.5",
     "dependency": "^0.0.1",
     "expo": "^49.0.16",
     "expo-camera": "~13.4.4",
@@ -28,15 +25,13 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "^3.22.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "@types/react-native-datepicker": "^1.7.2",
-    "@types/react-native-modern-datepicker": "^1.0.4",
-    "@types/react-native-vector-icons": "^6.4.13",
     "typescript": "^5.1.3"
   },
   "private": true
